--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.1.1",
     "aos": "^3.0.0-beta.6",
     "keen-slider": "^6.8.6",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
-    "sort-by": "^1.2.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
