--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-tabs": "^6.0.2",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
