--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.6.0",
+    "firebase": "^10.5.2",
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-tabs": "^6.0.2",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
