--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
     "firebase": "^10.5.2",
+    "jodit-react": "^4.1.2",
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
