--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.14.8",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "firebase": "^10.5.2",
     "jodit-react": "^4.1.2",
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
