--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.5.2",
     "jodit-react": "^4.1.2",
     "keen-slider": "^6.8.6",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
@@ -26,6 +27,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-tabs": "^6.0.2",
